<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gs.gscartoon.home.view.HomeActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/bg_action_bar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <TextView
                android:id="@+id/tv_toolbar_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textColor="@color/WHITE"
                android:textSize="20sp"
                android:singleLine="true"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/dl_left_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@color/pageBackground"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:clickable="true">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_buildings"
                    android:layout_gravity="bottom"/>
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_launcher"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    fresco:roundedCornerRadius="45dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="right"/>
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/rl_kuaikan"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/WHITE">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_kuai_kan_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kuaikan"
                    android:layout_centerInParent="true"
                    android:textColor="@color/KuaiKanColor"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_wangyi"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/WHITE">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_wang_yi_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/wangyi"
                    android:textColor="@color/WangYiColor"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_zhijia"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/WHITE">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_zhi_jia_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zhijia"
                    android:textColor="@color/ZhiJiaColor"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_manman"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/WHITE">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_man_man_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/manman"
                    android:textColor="@color/ManManColor"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:background="@color/WHITE"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_history"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="历史记录"
                    android:textColor="@color/ToolbarLight"
                    android:textSize="16sp"
                    android:transitionName="@string/transition_name_history_title"/>
                <TextView
                    android:id="@+id/tv_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="我的收藏"
                    android:textColor="@color/ToolbarLight"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="关于作者"
                    android:textColor="@color/ToolbarLight"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
